# cm3070-final-project

./: .gitattributes  .gitignore  README.md  compute_inbreast_ci.py  pyproject.toml
.streamlit/: style.css
checkpoints/cbis-whole-final/: best_model.safetensors
checkpoints/cbis-whole-wd-only/: best_model.safetensors
checkpoints/default/cbis-patch-multi/: best_model.npz
checkpoints/default/inbreast-whole-finetune/: best_model.safetensors
docs/: training_log.md
notebooks/: 01-cbis-ddsm.ipynb  01-cbis-ddsm.py  02-inbreast.ipynb  02-inbreast.py  03-cbis-ddsm-original.ipynb  03-cbis-ddsm-original.py  03-preprocess.ipynb  03-preprocess.py  04-patches.py  04-preprocessing.ipynb  04-preprocessing.py  05-vindr.ipynb  05-vindr.py
scripts/: create_dataset.py
src/: __init__.py  app.py  compute_inbreast_ci.py  datasets.py  display.py  finetune_whole_image.py  inference.py  inference_multiclass.py  inference_multiview.py  inference_whole_image.py  model_utils.py  trainer.py  trainer_multiclass.py  trainer_whole_image.py  transforms.py  types.py
src/app/: __init__.py  content.py  types.py  utils.py
src/data/: __init__.py  cbis_ddsm.py  prepare_cbis.py  prepare_cbis_full.py  prepare_cbis_patches.py  prepare_cbis_whole.py  prepare_inbreast_full.py  prepare_inbreast_whole.py  prepare_vindr_whole.py  preprocessing.py
src/models/: whole_image_classifier.py
tests/: test_accessibility.py  test_inference.py  test_preprocessing.py  test_transforms.py
