[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cm3070-final-project"
version = "0.1.0"
description = "On-device mammography classification with local fine-tuning using MLX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.5.0",
    "jupytext>=1.18.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pydicom>=3.0.1",
    "pillow>=11.0.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "mlx>=0.21.0",
    "tqdm>=4.67.0",
]

[project.scripts]
prepare-cbis = "src.data.prepare_cbis:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
