[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cm3070-final-project"
version = "0.1.0"
description = "On-device mammography classification with local fine-tuning using MLX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.5.0",
    "jupytext>=1.18.1",
    "matplotlib>=3.10.7",
    "pandas>=2.2.1",
    "pydicom>=3.0.1",
    "pillow>=10.4.0",
    "numpy==1.26.2",
    "scikit-learn>=1.5.0",
    "mlx>=0.21.0",
    "tqdm>=4.67.0",
    "mlx-image @ git+https://github.com/riccardomusmeci/mlx-image.git",
    "torch>=2.9.1",
    "wandb>=0.23.0",
    "albumentationsx>=2.0.13",
    "pytypedstream>=0.1.0",
    "streamlit>=1.41.0"
]

[project.scripts]
prepare-cbis = "src.data.prepare_cbis:main"
train = "src.trainer:main"

[tool.uv]
package = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "playwright>=1.58.0",
    "axe-playwright-python>=0.1.7",
    "ruff>=0.15.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["src/app.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]
